--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -2,4 +2,8 @@ $body-font-family: 'Homenaje', sans-serif  !important;
 
 .v-application {
     font-family: $body-font-family;
+    .v-card *:not(.v-btn, .v-input){
+        
+        font-size: 1.1em !important;
+    }
 }
