--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -2,8 +2,15 @@ $body-font-family: 'Homenaje', sans-serif  !important;
 
 .v-application {
     font-family: $body-font-family;
-    .v-card *:not(.v-btn, .v-input){
+    .v-card {
+            
+        background-color: #F1E9D6 !important;
+        *:not(.v-btn, .v-input){
+            
+            font-size: 1.1em !important;
+            
+        }
         
-        font-size: 1.1em !important;
     }
+
 }
