--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -29,3 +29,19 @@ html {
         background-color: #F1E9D6 !important;
     }
 }
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.v-application, .v-application--wrap{
+  min-height: 100%;
+}
+
+.close-btn {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  color: black;
+}
